skeleton, pre-app

--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-hello
+<html>
+    <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="style-0.css"/>
+    <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+        
+    </head>
+  <body>
+        <div name="slide1" id="slide1" class="slide">
+            <div class="centered-text">
+                <h1>FreeCodeCamp</h1>
+                <h4>The Cutting Edge.</h4>
+                <hr></hr>
+                <div id="clock">
+            </div>
+        </div>
+  </body>
+</html>
+      
