min size redo, session text

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <article class="clock">
                   <div class="progress-container">
                     <div class="progress-text">
-                        <span>session length</span>
+                        <h2>{{currentMode}}</h2>
                         <h2>{{timers.session}}</h2>
                     </div>
                   </div>
