disable checkbox if timer on

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="switch">
                   <span>start from</span>
-                  <input id="cmn-toggle-4" class="cmn-toggle cmn-toggle-round-flat" type="checkbox" data-ng-click="swapTimer()">
+                  <input id="cmn-toggle-4" class="cmn-toggle cmn-toggle-round-flat" type="checkbox" ng-disabled="!checkTimer()" data-ng-click="swapTimer()">
                   <label for="cmn-toggle-4"></label>
                 </div>  
                 <div class="set-timer">
