--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <h3 class="plusMinus" data-ng-click="lowerBreak()">-</h3><h2 class="plusMinus">{{timers.cooldown}}</h2><h3 class="plusMinus" data-ng-click="addBreak()">+</h3>
                 </div>
                 <div class="switch">
-                  <span>start from</span>
+                  <span>Swap</span>
                   <input id="cmn-toggle-4" class="cmn-toggle cmn-toggle-round-flat" type="checkbox" ng-disabled="!checkTimer()" data-ng-click="swapTimer()">
                   <label for="cmn-toggle-4"></label>
                 </div>  
