pause sign works online O.o

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                       </div>
                   </div>
                   <div class="progress-text">
-                        <h3 data-ng-show="checkTimer()"><i class="fa fa-pause"></i>&#9612;&#9612;</h3>
+                        <h3 data-ng-show="checkTimer()"><i class="fa fa-pause"></i></h3>
                         <h2>{{currentMode}}</h2>
                         <h2>{{timeLeft}}</h2>
                   </div>
